[POI_053][www.tinyurl.com/POI-PLAYLIST]

--- a/POI_053.HTM
+++ b/POI_053.HTM
@@ -509,9 +509,9 @@
                 U32 o_x ; //: @o_x@ : ODD__Cell X ?     [45P]   [BUG][16P]://
                 U32 o_y ; //: @o_y@ : ODD__Cell Y ?     [45P]   [BUG][16P]://
                                                     //::[---]://
-                UV2 mv0 ; //: Magnitude_of[__vp0__]     [46P]://
-                UV2 mv1 ; //: Magnitude_of[__vp1__]     [46P]://
-                UV2 duf ; //: Discrete_Units_Per_Frag   [46P]://
+                FV2 mv0 ; //: Magnitude_of[__vp0__]     [53P]   [46P]://
+                FV2 mv1 ; //: Magnitude_of[__vp1__]     [53P]   [46P]://
+                FV2 duf ; //: Discrete_Units_Per_Frag   [53P]   [46P]://
                                                     //::[---]://
                 UV2 vfc ; //: Viewport(local)FragCoord  [49P]://
                           //: $_DIAGRAM_VFC_$ ::::::::::[49P]://
