[POI_081][www.tinyurl.com/POI-PLAYLIST]

--- a/POI_081.HTM
+++ b/POI_081.HTM
@@ -622,7 +622,7 @@
             uniform UV4 d_vpc ; //:$_TILEMAP_VPC_$      [37P]://
             uniform UV4 d_vp0 ; //:$_TILEMAP_VP0_$      [37P]://
             uniform UV4 d_vp1 ; //:$_TILEMAP_VP1_$      [37P]://
-            uniform U32 d_til_m64 ; //:$_TIL_M64_$      [081]://
+            uniform U32 d_til_m64 ; //:$_TIL_M64_$      [81P]://
                                                     //::[---]://
             //:#_FOR_RENDERING_TILE_GTX_GTY_#:[70P]:---------://
             U32 n10_u32[20]=U32[20](                 //:[70P]://
